--- a/style.css
+++ b/style.css
@@ -141,6 +141,9 @@ p {
 .thank-you-card {
     align-items: center;
     display: none;
+    text-align: center;
+    padding-top: 45px;
+    padding-bottom: 45px;
 }
 
 .thank-you-card .number-selection {
@@ -148,6 +151,7 @@ p {
     border-radius: 22.5px;
     width: 193px;
     height: 32px;
+    margin-top: 32px;
     align-self: center;
     display: flex;
     align-items: center;
@@ -159,11 +163,62 @@ p {
     color: var(--orange);
 }
 
-.thank-you-card {
-    text-align: center;
+.thank-you-card h1 {
+    margin-top: 32px;
+}
+
+.thank-you-card p {
+    margin-top: 7px;
 }
 
 .attribution {
     clear: both;
     color: var(--light-grey);
+}
+
+@media screen and (max-width: 600px) {
+    h1 {
+        font-size: 24px;
+        line-height: 30px;
+    }
+    
+    h2 {
+        font-size: 14px;
+        line-height: 18px;
+        letter-spacing: 1.86667px;
+    }
+    
+    .rating-text {
+        font-size: 14px;
+        line-height: 24px;
+        letter-spacing: 0.175px;
+    }
+    
+    p {
+        font-size: 14px;
+        line-height: 22px;
+    }
+
+    .card {
+        width: 327px;
+        padding: 24px 24px 32px 24px;
+    }
+
+    .card h1 {
+        margin-top: 16px;
+    }
+
+    .card p {
+        margin-top: 10px;
+    }
+
+    .card form {
+        gap: 24px;
+    }
+
+    .card form .rating-buttons .rating-button {
+        height: 42px;
+        width: 42px;
+        line-height: 42px;
+    }
 }
